<resources>
    <string name="app_name">Finance App</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="monthly_profit_prefix">$</string>

    <!--  Content Description -->
    <string name="cd_user_image_icon">User Image Icon</string>

    <!-- Text -->
    <string name="txt_monthly_profit_label">Monthly Profit:</string>
    <string name="txt_remainder_label">Remainder:</string>
    <string name="txt_non_card_income">Non card related income:</string>
    <string name="txt_cards_label">Cards:</string>
    <string name="txt_add">Add</string>
    <string name="txt_tags">Tags</string>
    <string name="txt_general_income">General Income</string>
    <string name="txt_installments_label">Installments:</string>
    <string name="txt_fees_label">Fees:</string>
    <string name="txt_home">Home</string>
    <string name="general_income">General</string>
    <string name="txt_card_name">Card\'s name</string>
    <string name="txt_card_final_number">Final Number</string>
    <string name="txt_closure_date">Closure Date</string>
    <string name="txt_due_date">Due Date</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_save_card">Save Card</string>

    <!-- Error -->
    <string name="err_string">An Unexpected error has occurred </string>
    <string name="err_date_parse">Error parsing date</string>
    <string name="txt_card_created">Card created with success</string>

</resources>